traces/bug_106.txt
examples++-load/isolineP1.cpp:96: error: DEAD_STORE
  The value written to &nbv (type int) is never used.
Showing all 1 steps of the trace


examples++-load/isolineP1.cpp:96:3: Write of unused value
94.     Mesh &Th=*pTh;
95.     Mesh *m= pTh;   // question a quoi sert *m ??
96.     int nbv=Th.nv; // nombre de sommet 
        ^
97.     int nbt=Th.nt; // nombre de triangles
98.     int nbe=Th.neb; // nombre d'aretes fontiere
